<resources>
    <string name="app_name">HackerKernel</string>
    <string name="todo">TODO</string>
    <string name="logo_name">Logo Name</string>
    <string name="login">Login</string>
    <string name="logo_name_"><![CDATA[Logo Name >]]></string>
    <string name="welcome">Welcome !</string>
    <string name="please_sign_in_to_continue">Please Sign-in to continue</string>
    <string name="enter_password">Enter Password</string>
    <string name="email_address">Email Address</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_result_found">No Result Found</string>
</resources>
