<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:id="@+id/linearLayout_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#0080ff"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/logo_name_"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="13sp"
        android:layout_marginTop="5dp"
        android:text="@string/login"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:text="@string/welcome"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="15sp"
        android:text="@string/please_sign_in_to_continue"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"

        android:orientation="vertical"
        android:paddingTop="25sp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12sp"
                android:drawableRight="@drawable/ic_person_black_24dp"
                android:hint="@string/email_address"
                android:singleLine="true"
                android:textColor="#000000"
                android:drawableTint="#000000"
                tools:ignore="RtlHardcoded,UnusedAttribute"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#000000">

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12sp"
                android:hint="@string/enter_password"
                android:imeOptions="actionSend"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:importantForAutofill="no"
                tools:ignore="UnusedAttribute" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:background="@drawable/button_back"
            android:text="@string/login"
            android:id="@+id/loginclick"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:paddingLeft="50dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:paddingRight="50dp" />


    </LinearLayout>
</LinearLayout>